Fix post-decision layout bugs and show recon type label (#663)

--- a/alcs-frontend/src/app/features/application/post-decision/post-decision.component.scss
+++ b/alcs-frontend/src/app/features/application/post-decision/post-decision.component.scss
@@ -92,7 +92,7 @@ section {
   margin-top: 16px;
   margin-bottom: 32px;
   display: grid;
-  grid-template-columns: 1fr 1fr 100px;
+  grid-template-columns: 1fr 1fr;
   grid-row-gap: 24px;
 
   .subheading2 {
